# Dockerfile-Intro

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test_push.yaml
app/: main.py
tests/: test_main.py
