[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["me"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "I",  # isort
    "C4", # flake8-comprehensions
    "F",  # pyflakes
    "E",  # pycodestyle
    "TID",  # flake8-tidy-imports
    "RUF", # ruff-internal
]
ignore = [
    "E501",  # line too long, handled by black
    "C401",  # generator syntax for sets vs always force set comprehension
    "PLC0414",  # allow explicit re-exports us<LeftMouse>ing 'as' without forcing __all__
    "C901", # mccabe
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
